@@ -3,8 +3,8 @@ package fr.raksrinana.filesecure.files;
 import fr.raksrinana.filesecure.Main;
 import fr.raksrinana.filesecure.config.BackupStrategy;
 import lombok.Getter;
-import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
+import org.jetbrains.annotations.NotNull;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Optional;
@@ -25,7 +25,7 @@ class FileDifference implements DifferenceElement{
 	 * @param sourcePath    The source folder.
 	 * @param desiredTarget The target folder (where to copy/move/...).
 	 */
-	FileDifference(@NonNull final Path sourcePath, @NonNull final DesiredTarget desiredTarget){
+	FileDifference(@NotNull Path sourcePath, @NotNull DesiredTarget desiredTarget){
 		this.sourcePath = sourcePath;
 		this.desiredTarget = desiredTarget;
 	}
@@ -35,9 +35,9 @@ class FileDifference implements DifferenceElement{
 	 *
 	 * @param backupStrategy The strategy to apply.
 	 */
-	public void applyStrategy(@NonNull final BackupStrategy backupStrategy){
+	public void applyStrategy(@NotNull BackupStrategy backupStrategy){
 		generateUniqueName().ifPresent(finalName -> {
-			final var targetPath = desiredTarget.getTargetFolder().resolve(finalName);
+			var targetPath = desiredTarget.getTargetFolder().resolve(finalName);
 			log.info("{} file {} to {}", backupStrategy.name(), sourcePath, targetPath);
 			if(!Main.parameters.isDryRun()){
 				try{
@@ -56,7 +56,7 @@ class FileDifference implements DifferenceElement{
 						}
 					}
 				}
-				catch(final Exception e){
+				catch(Exception e){
 					log.warn("Error applying strategy {} on file {}", backupStrategy, sourcePath, e);
 				}
 			}
@@ -66,13 +66,13 @@ class FileDifference implements DifferenceElement{
 	private Optional<String> generateUniqueName(){
 		try{
 			var i = 0;
-			final var desiredPath = sourcePath.getParent().resolve(getDesiredTarget().getDesiredName());
-			final var extIndex = getDesiredTarget().getDesiredName().lastIndexOf(".");
-			final var prefix = getDesiredTarget().getDesiredName().substring(0, extIndex);
-			final var ext = getDesiredTarget().getDesiredName().substring(extIndex);
+			var desiredPath = sourcePath.getParent().resolve(getDesiredTarget().getDesiredName());
+			var extIndex = getDesiredTarget().getDesiredName().lastIndexOf(".");
+			var prefix = getDesiredTarget().getDesiredName().substring(0, extIndex);
+			var ext = getDesiredTarget().getDesiredName().substring(extIndex);
 			var finalName = getDesiredTarget().getDesiredName();
 			while(Files.exists(getDesiredTarget().getTargetFolder().resolve(finalName))){
-				final var newName = String.format("%s (%d)%s", prefix, ++i, ext);
+				var newName = "%s (%d)%s".formatted(prefix, ++i, ext);
 				log.debug("File '{}' already exists in target, trying with suffix {}", desiredPath, i);
 				finalName = newName;
 			}
